# mira-rs

./: Cargo.toml  README.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/discord/: Cargo.toml
apps/discord/src/: main.rs
crates/adapters/broadcast_box/: Cargo.toml
crates/adapters/broadcast_box/src/: lib.rs  models.rs
crates/adapters/discord/: Cargo.toml
crates/adapters/discord/src/: commands.rs  lib.rs  notifier.rs  types.rs
crates/adapters/discord/src/commands/: subscribe.rs
crates/adapters/storage/: Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: domain.rs  lib.rs  models.rs
crates/core/src/domain/: dispatcher.rs  scheduler.rs  worker.rs
crates/core/src/models/: command.rs  error.rs  status.rs
crates/core/src/ports/: inbound.rs  outbound.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: lib.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: lib.rs
src/: commands.rs  main.rs
