[workspace]
members = [
    "crates/core",
    "crates/adapters/storage",
    "crates/adapters/discord",
    "crates/adapters/broadcast_box",
    "crates/monitor",
    "apps/*",
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
thiserror = "2.0.18"
tokio = "1.52.1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
poise = "0.6.1"
