[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
status-watcher = { path = "../../crates/watcher" }
mira-core = { path = "../../crates/core" }
broadcast_box = { path = "../../crates/adapters/broadcast_box" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
chrono = { workspace = true }
