[package]
name = "mira-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
mira-monitor = { path = "../../crates/monitor" }
mira-core = { path = "../../crates/core" }
mira-broadcast-box = { path = "../../crates/adapters/broadcast_box" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
chrono = { workspace = true }
