[package]
name = "broadcast_box"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
mira-core = { path = "../../core" }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
serde = { version = "1", features = ["derive"] }
